--- a/views/templates/contactFormUser.html.twig
+++ b/views/templates/contactFormUser.html.twig
@@ -1,4 +1,4 @@
- <form id="contact-form-container" method="POST" action="?route=contact" class ="form-control">
+ <form id="contact-form-container" method="POST" action="?route=contactUsForm" class ="form-control">
 
                     <div class='container-contact'>  
 
@@ -47,7 +47,8 @@
                                 <input  type    = "submit"
                                         name    = "soumettre"
                                         value   = "Envoyer"
-                                        class = "btn-primary">
+                                        class = "btn-primary"
+                                        >
                         </fieldset>
                         </div>
                 </form>
